@@ -33,6 +33,7 @@ InteropProvider
 - 1666311 Fixed missing support for old-style indication providers
 - 1664992 Fixed interopProvider segfaults with provider-grouping
 - 1669192 Fixed new providerregistration causes problems
+- 1668852 Fixed memory leak in interop provider
 
 Changes in 1.2.0
 ================
