@@ -1,3 +1,8 @@
+2007-03-01  Sven Schuetz
+
+	* instance.c, providerRegister.c, interopProvider.c, queryStatement.c:
+	Fixed 1668852: memory leak in interop provider
+
 2007-02-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
 
 	* Makefile.am: 
